--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,77 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#container{
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+
+#calculatorBox{
+  background-color: grey;
+  color: white;
+  width: 400px;
+  height: 500px;
+}
+
+#calculatorScreen{
+  background-color: whitesmoke;
+  width: 380px;
+  height: 100px;
+  margin: 10px auto;
+}
+
+#calculatorGrid{
+  display: grid;
+  row-gap: 10px;
+  column-gap: 10px;
+  padding: 10px;
+  font-weight: bold;
+}
+
+.box{
+  background-color: yellow;
+  height: 50px;
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.row{
+  display: flex;
+  justify-content: space-between;
+}
+
+.row-of-four .box{
+  width: calc((400px - 50px) / 4);
+}
+
+.first .box{
+  background-color: rgb(234, 146, 234);
+}
+
+.second .box{
+  background-color: rgb(129, 252, 129);
+}
+
+.number.box{
+  background-color: rgb(146, 146, 255);
+}
+
+.operator.box{
+  background-color: rgb(157, 151, 151);
+}
+
+.equal.box{
+  background-color: rgb(196, 53, 53);
+}
+
+.row-of-five .box{
+  width: calc((400px - 50px) / 5);
 }
