--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,12 @@
   width: 380px;
   height: 100px;
   margin: 10px auto;
+  border: none;
+  outline: none;
+  display: block;
+  text-align: right;
+  font-size: 70px;
+  padding: 0 10px;
 }
 
 #calculatorGrid{
@@ -44,6 +50,10 @@
   color: white;
   font-weight: bold;
   font-size: 14px;
+}
+
+.box:hover{
+  opacity: 0.7;
 }
 
 .row{
